fixed issues with portrait vs landscape on mobile devices

--- a/client/src/css files/app.css
+++ b/client/src/css files/app.css
@@ -47,7 +47,7 @@ main {
 .welcome h2 {
     border-radius: 10px;
     padding: 20px;
-    background-color: #f98e54c0;
+    background-color: #f98e54a0;
     max-width: 70vw;
     margin-bottom: 100px;
     font-size: calc(20px + 0.25vw);
